fix not insert old feed add retainedDate change insert terms, AutoUpdateTask, updateFeed fix autoUpdateTask test case